<resources>
    <string name="app_name">Examen Nach</string>
    <string name="img_description">Title Header</string>
    <string name="price_example">Favorito</string>
    <string name="pokemon_name">Pokémon</string>
    <string name="pokemon_subName">Sub nombre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon_height">"Altura: "</string>
    <string name="pokemon_weight">"Peso: "</string>
    <string name="pokemon_candy">Caramelos:</string>
    <string name="pokemon_candy_count">#Caramerlos:</string>
    <string name="pokemon_egg">Caminar:</string>
    <string name="pokemon_spawn">Indice de aparición:</string>
    <string name="pokemon_avg">"% Proemedio: "</string>
    <string name="pokemon_time">"Tiempo: "</string>
</resources>